frontend/tests/cases/negative/unique/cloneNonCloneable.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/unique/cloneNonCloneable.gr:4:9:
Expcted an existential type on the left-hand side of unpack, but got `*Int`